[package]
name = "rbuf"
version = "0.1.1"
authors = ["Daniel Mueller <deso@posteo.net>"]
edition = "2018"
license = "GPL-3.0-or-later"
homepage = "https://github.com/d-e-s-o/rbuf"
repository = "https://github.com/d-e-s-o/rbuf.git"
readme = "README.md"
description = """
A general purpose ring buffer implementation with some non-standard constraints.
"""

[dependencies]
