[package]
name = "rbuf"
version = "0.1.3"
authors = ["Daniel Mueller <deso@posteo.net>"]
edition = "2021"
rust-version = "1.56"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/d-e-s-o/rbuf"
repository = "https://github.com/d-e-s-o/rbuf.git"
readme = "README.md"
description = """
A general purpose ring buffer implementation with some non-standard constraints.
"""

[dependencies]
