[package]
name = "rbuf"
version = "0.2.0"
authors = ["Daniel Mueller <deso@posteo.net>"]
edition = "2021"
rust-version = "1.58"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/d-e-s-o/rbuf"
repository = "https://github.com/d-e-s-o/rbuf.git"
documentation = "https://docs.rs/rbuf"
readme = "README.md"
description = """
A general purpose ring buffer implementation with some non-standard constraints.
"""

[lints.rust]
deprecated-safe = "warn"
future-incompatible = "warn"
keyword-idents = "warn"
let-underscore = "warn"
missing-debug-implementations = "warn"
missing-docs = "warn"
trivial-numeric-casts = "warn"
unsafe-op-in-unsafe-fn = "warn"
unused = "warn"

[lints.clippy]
collapsible-else-if = "allow"
collapsible-if = "allow"
diverging-sub-expression = "allow"
let-and-return = "allow"
let-unit-value = "allow"
module-inception = "allow"
type-complexity = "allow"
absolute-paths = "warn"
allow-attributes = "warn"
clone-on-ref-ptr = "warn"
dbg-macro = "warn"
derive-partial-eq-without-eq = "warn"
doc-markdown = "warn"
join-absolute-paths = "warn"
large-enum-variant = "warn"
redundant-closure-for-method-calls = "warn"
unchecked-duration-subtraction = "warn"
uninlined-format-args = "warn"
wildcard-imports = "warn"
